fixed event controllers, history javascript, and parallax on mobile

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -68,10 +68,8 @@
     border: 1px solid white;
 }
 
-.table-content-collapse {
+.collapse-table {
     display: none;
-    border: none;
-    overflow: hidden;
 }
 
 .table-content-collapse.table.table-bordered.table-sm {
@@ -87,4 +85,19 @@
 
 .UIlinks {
     padding: 15px;
+}
+
+@media only screen and (max-width: 400px) {
+    .parallax.first {
+        background-image: url("DSC_0345.jpg");
+        background-size: contain;
+    }
+    .parallax.second {
+        background-image: url("DSC_0323.jpg");
+        background-size: contain;
+    }
+    .parallax.third {
+        background-image: url("DSC_0311.jpg");
+        background-size: contain;
+    }
 }
